@@ -2,6 +2,7 @@
 shantibraford - 12/12/2007:
 * fixes in Sync.sync_users
 * Sync.sync_transfer_stats getting close
+* RatioSync IDs cannot be auto-generated, need to be shared between sites -- added migration, changes for this
 
 shantibraford - 12/12/2007:
 * fixed a nasty bug that was causing signups to fail silently (fixed by doing a @user.reload to get the generated remember_token)
